Add the flash code and images
Continue to add the features of flashing

1./ Add the function of erase and flash
2./ Add the eflash image, and configurations
3./ Fix a bug in parse_boot_header_config
4./ Add a utility for dumping boot header config from
    packaged binary
5./ Also move some sections of README from flash/README
    to README.md

--- a/flash/Makefile
+++ b/flash/Makefile
@@ -2,7 +2,7 @@ CC := gcc
 CFLAGS := -Wall -g
 INCLUDE := -I../inc/ -I./
 CFLAGS += $(INCLUDE)
-SRCS := comm.c uart.c flash.c
+SRCS := comm.c uart.c flash.c ../common/crypto.c
 OBJS := $(SRCS:.c=.o)
 TARGET := flash
 
