Fix the issue of SHA in Boot_Header_Config
The order of the hash is incorrectly filled. Also pre-fill the empty
space with 0xFF when packing binary with BHC header.

Minor changes to dts configuration so that it can be compiled with
device tree compiler (dtc) directly.

--- a/image_and_config/bl_factory_params_IoTKitA_40M.dts
+++ b/image_and_config/bl_factory_params_IoTKitA_40M.dts
@@ -1,5 +1,5 @@
 /dts-v1/;
-/include/ "bl602_base.dtsi";
+///include/ "bl602_base.dtsi";
 // version: 17
 // last_comp_version: 16
 // boot_cpuid_phys: 0x0
@@ -35,8 +35,10 @@
             feature = "button";
             active = "Hi";
             mode = "multipress";
+            hbn_use = "disable";
             button {
                 debounce = <10>;
+                trig_level = "Hi";
                 short_press_ms {
                     start = <100>;
                     end = <3000>;
@@ -51,9 +53,7 @@
                     start = <15000>;
                     kevent = <4>;
                 };
-                trig_level = "Hi";
             };
-            hbn_use = "disable";
         };
     };
     i2s {
